...
        switch self {
        case .home: return "Home"
        case .budgets: return "Budgets"
        case .income: return "Income"
        case .cards: return "Cards"
        case .cardDetail: return "Card Details"
        case .categories: return "Categories"
        case .presets: return "Presets"
        }
    }
}

enum TipsKind: String {
...
